<resources>
    <string name="app_name">My Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_map_key" translatable="false">AIzaSyBlLerKa0sNt0SI8DPTPk1SY1cJMwbUK5w</string>
    <string name="proceed">Proceed</string>
    <string name="save">Save</string>
    <string name="location_name">Location Name</string>
    <string name="location_latitude">Location Latitude</string>
    <string name="location_longitude">Location Longitude</string>
    <string name="inputActivity">Input</string>
    <string name="search_button">Search</string>
</resources>
