<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextLocationName"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:gravity="center"
        android:hint="@string/location_name"
        android:autofillHints=""
        android:inputType="" />

    <EditText
        android:id="@+id/editTextLocationLat"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:gravity="center"
        android:hint="@string/location_latitude"
        android:autofillHints=""
        android:inputType="" />

    <EditText
        android:id="@+id/editTextLocationLong"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:gravity="center"
        android:hint="@string/location_longitude"
        android:autofillHints=""
        android:inputType="" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnProceed"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="26dp"
        android:text="@string/save" />

    <Button
        android:id="@+id/btnProceed"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="103dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="241dp"
        android:text="@string/proceed" />

</RelativeLayout>